# warframe-profile

./: .gitignore  .gitmodules  DOWNLOADS.txt
.github/workflows/: release.yml  update-downloads.yml
app/: .gitignore  index.html  package.json  pnpm-lock.yaml  tsconfig.json  vite.config.ts
app/scripts/: copy-data.mjs
app/src/: App.tsx  index.css
app/src-tauri/: Cargo.toml  tauri.conf.json  tauri.full.conf.json  tauri.zh.conf.json
app/src-tauri/capabilities/: default.json
app/src-tauri/icons/: icon.icns
app/src-tauri/src/: lib.rs  main.rs
app/src/components/: Header.tsx  ProfileHeader.tsx  ProfileView.tsx  SetupPanel.tsx
app/src/components/tabs/: Achievements.tsx  Fashion.tsx  Missions.tsx  Stats.tsx  Syndicates.tsx
app/src/lib/: dict.ts  exportData.ts  utils.ts
app/src/types/: profile.ts
docs/: downloads.json  index.html  latest-full.json  latest-zh.json  releases.json
